KEN-12: UPDATE major changes and installed phpstan
